# verifyemployee

./: README.md  pyproject.toml
src/fraud_detector/: crew.py  main.py
src/fraud_detector/config/: agents.yaml  tasks.yaml
