[project]
name = "fraud_detector"
version = "0.1.0"
description = "fraud-detector using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
fraud_detector = "fraud_detector.main:run"
run_crew = "fraud_detector.main:run"
train = "fraud_detector.main:train"
replay = "fraud_detector.main:replay"
test = "fraud_detector.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
